Fixed broken CSS.

--- a/options.css
+++ b/options.css
@@ -51,5 +51,3 @@ div#weekdays {
   border: 1px solid #00aa00;
   padding: 0.5em;
 }
-
-#saved_message span {
